# anonypy

./: .flake8  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
anonypy/: __init__.py  anonymity.py  anonypy.py  attack.py  mondrian.py  util.py
data/: NHANES.csv  NHANES_attack.csv  receipt.csv
tests/: anonypy_test.py  attack_test.py  mondrian_test.py  preserver_test.py  receipt_test.py
